# VCLLVM

./: .gitignore  CMakeLists.txt  Pipfile  README.md  generate_ll.py  llgen.py  protogen.py
.github/workflows/: cmake.yml
include/AST/: AST.h  Node.h
include/Conversion/: Conversion.h
include/Conversion/Instruction/: BinaryOpConversion.h  CastOpConversion.h  FuncletPadOpConversion.h  MemoryOpConversion.h  OtherOpConversion.h  UnaryOpConversion.h
include/Origin/: ContextDeriver.h  OriginProvider.h  PreferredNameDeriver.h  ShortPositionDeriver.h
include/Passes/: EntryBlockParser.h  FunctionDeclarer.h  FunctionListToErr.h  InstructionMapper.h  SamplePass.h  VariableNamer.h
include/Passes/Function/: BlockMapper.h  FunctionBodyTransformer.h  FunctionContractDeclarer.h  FunctionDeclarer.h  FunctionInstructionTransformer.h  PureAssigner.h
include/Passes/Module/: ModuleSpecCollector.h
include/Transform/: BlockTransform.h  Transform.h
include/Transform/Instruction/: BinaryOpTransform.h  CastOpTransform.h  FuncletPadOpTransform.h  MemoryOpTransform.h  OtherOpTransform.h  TermOpTransform.h  UnaryOpTransform.h
include/Transform/Origin/: ContextDeriver.h  OriginProvider.h  PreferredNameDeriver.h  ShortPositionDeriver.h
include/Util/: Constants.h  Conversion.h  Exceptions.h  UtilIR.h
include/Util/Conversion/: Conversion.h
include/Util/Conversion/Instruction/: ArithmeticConversion.h  BinaryOpConversion.h  CastOpConversion.h  FuncletPadOpConversion.h  MemoryOpConversion.h  OtherOpConversion.h  UnaryOpConversion.h
lib/: CMakeLists.txt
lib/AST/: AST.cpp  CMakeLists.txt  Node.cpp
lib/AST/proto/: ast.proto
lib/Conversion/: CMakeLists.txt  Conversion.cpp
lib/Conversion/Instruction/: BinaryOpConversion.cpp  CastOpConversion.cpp  FuncletPadOpConversion.cpp  MemoryOpConversion.cpp  OtherOpConversion.cpp  UnaryOpConversion.cpp
lib/Origin/: CMakeLists.txt  ContextDeriver.cpp  OriginProvider.cpp  PreferredNameDeriver.cpp  ShortPositionDeriver.cpp
lib/Passes/: CMakeLists.txt  EntryBlockParser.cpp  FunctionDeclarer.cpp  FunctionListToErr.cpp  InstructionMapper.cpp  SamplePass.cpp  VariableNamer.cpp
lib/Passes/Function/: BlockMapper.cpp  FunctionBodyTransformer.cpp  FunctionContractDeclarer.cpp  FunctionDeclarer.cpp  FunctionInstructionTransformer.cpp  PureAssigner.cpp
lib/Passes/Module/: ModuleSpecCollector.cpp
lib/Transform/: BlockTransform.cpp  CMakeLists.txt  Transform.cpp
lib/Transform/Instruction/: BinaryOpTransform.cpp  CastOpTransform.cpp  FuncletPadOpTransform.cpp  MemoryOpTransform.cpp  OtherOpTransform.cpp  TermOpTransform.cpp  UnaryOpTransform.cpp
lib/Transform/Origin/: ContextDeriver.cpp  OriginProvider.cpp  PreferredNameDeriver.cpp  ShortPositionDeriver.cpp
lib/Util/: CMakeLists.txt  Conversion.cpp  Exceptions.cpp  UtilIR.cpp
lib/Util/Conversion/: Conversion.cpp
lib/Util/Conversion/Instruction/: ArithmeticConversion.cpp  BinaryOpConversion.cpp  CastOpConversion.cpp  FuncletPadOpConversion.cpp  MemoryOpConversion.cpp  OtherOpConversion.cpp  UnaryOpConversion.cpp
proto/: CMakeLists.txt  col.proto
proto/COL/: col.proto
test/: CMakeLists.txt  arithmetics.c  generate_ll.py  lit.cfg.py  lit.site.cfg.py.in
test/C/: int_arithmetics.c
test/C/arithmetics/: O0_mem2reg_cantor_triangular.c  O2_int_div.c  O2_int_mul.c  O2_int_sub.c  int_add.c  int_div.c
test/C/basic/: vardecl.c
test/C/conditionals/: O0_mem2reg_date_compare.c  O0_mem2reg_if-then-else.c  O0_mem2reg_nested-branches.c  if-then-else.c  nested-branches.c
test/C/functions/: O0_mem2reg_call.c  O0_mem2reg_cyclic_call.c  O0_mem2reg_fibonacci.c  O0_mem2reg_recursive_factorial.c  O0_mem2reg_recursive_mult.c
test/C/loops/: break-loop.c  double-loop-break.c  for-loop.c  infinite-loop.c  loop-with-condition.c  nested-loops.c  weird-loop.c  while-loop.c
test/C/types/: O0_mem2reg_boolean.c  O0_mem2reg_integer.c
test/IR/conditionals/: nested_branches.ll
test/LL_compiled/basic/: arithmetics.ll  arithmetics.s  vardecl.ll
test/LL_handwritten/: add.ll  add.s
tools/: CMakeLists.txt
tools/VCLLVM/: CMakeLists.txt  VCLLVM.cpp
tools/VcLLVM/: CMakeLists.txt  VcLLVM.cpp
